@@ -12,6 +12,7 @@
    <th>Current Run</th>
    <th>Current Status</th>
    <th>Status Comment</th>
+   <th>Laboratory</th>
   </tr>
  </thead>
  <tbody>
@@ -24,6 +25,7 @@
    <td>[% PROCESS current_runs_info %]</td>
    <td>[% instrument.current_instrument_status.instrument_status_dict.description %]</td>
    <td>[% instrument.current_instrument_status.comment %]</td>
+   <td>[% instrument.lab %]
   </tr>
 [% END %]
  </tbody>
