@@ -92,6 +92,25 @@ sub current_instruments {
   return $self->{'current_instruments'};
 }
 
+sub current_instruments_from_lab {
+  my $self  = shift;
+  my $filter_lab = shift;
+
+  if(!$self->{'current_instruments'}) {
+    my $pkg   = 'npg::model::instrument';
+    my $query = qq(SELECT @{[join q(, ), $pkg->fields()]}
+                   FROM   @{[$pkg->table()]}
+                   WHERE  id_instrument_format = ?
+                   AND    iscurrent            = 1
+                   AND    lab                  = '@{[$filter_lab]}');
+    $self->{'current_instruments'} =  $self->gen_getarray($pkg,
+                                                          $query,
+                                                          $self->id_instrument_format());
+  }
+
+  return $self->{'current_instruments'};
+}
+
 sub current_instruments_count {
   my $self  = shift;
   return scalar @{$self->current_instruments()};
@@ -118,16 +137,30 @@ sub _obtain_numerical_name_part {
 sub current_instruments_by_format {
   my ( $self ) = @_;
 
+  my $cgi = $self->util()->cgi();
+  my $filter_lab = $cgi->param('filter_lab');
+
   if ( ! $self->{current_instruments_by_format} ) {
     my $href = {};
     foreach my $format ( @{ $self->current_instrument_formats() } ) {
       my $model = $format->model();
       $model = $model eq q{HK} ? q{GA-II} : $model;
-      my @ordered = map  { $_->[0] }
-                    sort { $a->[1] <=> $b->[1] }
-                    map  { [ $_, $self->_obtain_numerical_name_part( $_->name() ) ] } @{ $format->current_instruments() };
-      if ( scalar @ordered ) {
-        $href->{$model} = \@ordered;
+      if ($filter_lab) {
+        my @ordered = map  { $_->[0] }
+                      sort { $a->[1] <=> $b->[1] }
+                      map  { [ $_, $self->_obtain_numerical_name_part( $_->name() ) ] } @{ $format->current_instruments_from_lab($filter_lab) };
+
+        if ( scalar @ordered ) {
+          $href->{$model} = \@ordered;
+        }
+      }
+      else {
+        my @ordered = map  { $_->[0] }
+                      sort { $a->[1] <=> $b->[1] }
+                      map  { [ $_, $self->_obtain_numerical_name_part( $_->name() ) ] } @{ $format->current_instruments() };
+        if ( scalar @ordered ) {
+          $href->{$model} = \@ordered;
+        }
       }
     }
     $self->{current_instruments_by_format} = $href;
@@ -196,6 +229,10 @@ initialise an object based on model being provided
 =head2 current_instruments - Arrayref of npg::model::instruments with iscurrent=1
 
   my $arCurrentInstruments = $oInstrumentFormat->current_instruments();
+
+=head2 current_instruments_from_lab - Arrayref of npg::model::instruments with iscurrent=1 and lab=lab
+
+  my $arCurrentInstruments = $oInstrumentFormat->current_instruments_from_lab($lab);
 
 =head2 instrument_formats - Arrayref of all instrument_formats (for all manufacturers)
 
