@@ -62,6 +62,8 @@ Readonly::Scalar our $COLOUR_LIGHT_ORANGE => [(252,174,42)];
 Readonly::Scalar our $COLOUR_BLUE   => [(61,171,255)];
 Readonly::Scalar our $COLOUR_YELLOW => [(246,229,171)];
 Readonly::Scalar our $COLOUR_PINK   => [(255,192,203)];
+Readonly::Scalar our $COLOUR_PALE_GREEN => [(208, 229, 165)];
+Readonly::Scalar our $COLOUR_LIGHT_TEAL => [(204, 227, 229)];
 Readonly::Scalar our $PROGRESS_BAR_BG   => [(220,220,220)];
 Readonly::Scalar our $PROGRESS_BAR_FG   => [(225,225,60)];
 
@@ -78,6 +80,7 @@ sub new {
 
   if($model && $model->id_instrument() &&
      $model->id_instrument() ne 'key' &&
+     $model->id_instrument() ne 'lab_key' &&
      $model->id_instrument() !~ /^\d+$/smx) {
     $model->name($model->id_instrument());
     $model->id_instrument(0);
@@ -91,6 +94,9 @@ sub list {
   my $self  = shift;
   my $util  = $self->util();
   my $cgi   = $util->cgi();
+
+  my $filter_lab = $cgi->param('filter_lab');
+
   my $model = $self->model();
   my $id_instrument_format = $cgi->param('id_instrument_format');
 
@@ -101,6 +107,8 @@ sub list {
                      });
     $model->{instruments} = $instrument_format->instruments();
 
+  } elsif ($filter_lab) {
+    $model->{instruments} = $model->current_instruments_from_lab($filter_lab);
   } else {
     $model->{instruments} = $model->current_instruments();
   }
@@ -196,6 +204,28 @@ sub read_key_png {
   return $im->png();
 }
 
+sub read_lab_key_png {
+  my $self = shift;
+
+  my $im       = GD::Image->new($IMAGE_DIMENSIONS,$IMAGE_DIMENSIONS);
+  my $colours = $self->_allocate_colours($im);
+  my $font     = gdSmallFont;
+
+  Readonly::Scalar my $TYPES => [
+                                 {'Ogilvie'          => $colours->{'pale_green'},  },
+                                 {'Sulston'          => $colours->{'light_teal'},   },
+                                ];
+  my $y = $KEY_OFFSET_Y;
+  for my $type (@{$TYPES}) {
+    my ($k, $v) = %{$type};
+    $im->filledRectangle($KEY_OFFSET_X, $y, $KEY_BLOCK_WIDTH, $y+$KEY_BLOCK_HEIGHT, $v);
+    $im->string($font, $KEY_OFFSET_X*2+$KEY_BLOCK_WIDTH, $y, $k, $colours->{'black'});
+    $y += $KEY_OFFSET_Y;
+  }
+
+  return $im->png();
+}
+
 sub _allocate_colours {
   my ($self, $im) = @_;
 
@@ -211,6 +241,8 @@ sub _allocate_colours {
   $colours->{'pink'}   = $im->colorAllocate(@{$COLOUR_PINK});
   $colours->{'pbar_bg'}   = $im->colorAllocate(@{$PROGRESS_BAR_BG});
   $colours->{'pbar_fg'}   = $im->colorAllocate(@{$PROGRESS_BAR_FG});
+  $colours->{'pale_green'} = $im->colorAllocate(@{$COLOUR_PALE_GREEN});
+  $colours->{'light_teal'} = $im->colorAllocate(@{$COLOUR_LIGHT_TEAL});
   return $colours;
 }
 
@@ -349,12 +381,29 @@ sub _run_status4image {
   return $run ? $run->current_run_status->run_status_dict->description() : q();
 }
 
+sub _get_lab_color {
+
+  my $self       = shift;
+  my $model      = $self->model();
+
+  my %lab_colours = (
+    'Sulston' => $COLOUR_LIGHT_TEAL,
+    'Ogilvie' => $COLOUR_PALE_GREEN);
+
+  if (exists $lab_colours{$model->lab}) {
+     return $lab_colours{$model->lab};
+  }
+
+  return $COLOUR_WHITE;
+}
+
 sub read_png { ## no critic (Subroutines::ProhibitExcessComplexity)
   my $self       = shift;
   my $model      = $self->model();
   my $util       = $self->util();
 
   return $self->read_key_png() if $model->id_instrument() eq 'key';
+  return $self->read_lab_key_png() if $model->id_instrument() eq 'lab_key';
 
   my $inst_model = $model->instrument_format->model();
   my $is2slot = $model->is_two_slot_instrument;
@@ -385,6 +434,9 @@ sub read_png { ## no critic (Subroutines::ProhibitExcessComplexity)
   my $width  = $is2slot ? 2*$IMAGE_DIMENSIONS+2 : $IMAGE_DIMENSIONS;
   my $height = $IMAGE_DIMENSIONS;
   my $im     = GD::Image->new($width, $height);
+
+  $im->colorAllocate(@{$self->_get_lab_color()});
+
   my $colours = $self->_allocate_colours($im);
   my $font   = gdSmallFont;
 
@@ -550,6 +602,8 @@ npg::view::instrument - view handling for instruments
 =head2 read_png - annotated instrument graphic
 
 =head2 read_key_png - special case handling for instrument of id 'key'
+
+=head2 read_lab_key_png - special case handling for instrument of id 'lab_key'
 
 =head2 read_runs - additional handling for listing runs by status
 
